2017-05-20 (0.12.10)
	COMMON: Implemented Nil system constant
	COMMON: Implemented Maxint system constant

2017-05-14 (0.12.10)
	COMMON: Assign multiple variables from an ARRAY

2017-05-14 (0.12.10)
	COMMON: Optimise execution between repeated kwLINE,kwGOTO segments
	COMMON: Cleanup redundant typedefs
	SDL: Debugger only show local variables when in SUB or FUNC
	SDL: Fix crash using debugger when pressing arrow key

2017-05-08 (0.12.10)
	COMMON: Fix FUNC call as pseudo class method

2017-05-06 (0.12.10)
	COMMON: SUB can now use RETURN statement
	COMMON: Fix line number count when using multi-line strings

2017-05-04 (0.12.10)
	UI: The FORM command now reports an error when IMAGE input fails to load

2017-04-30 (0.12.10)
	COMMON: FUNC can now use RETURN statement as synonym for FUNCNAME=result

2017-04-30 (0.12.10)
	COMMON: Fix square bracket access to 2D arrays
	SDL: PEN OFF command now hides the cursor

2017-04-01 (0.12.9)
	COMMON: TRANSLATE now takes optional ignore-case argument

2017-03-12 (0.12.9)
	COMMON: fix regression with dim MAP field

2017-03-12 (0.12.9)
	COMMON: fix internal error handling long string variables

2017-02-08 (0.12.9)
	COMMON: create MAP from single line JSON without ARRAY command

2017-02-05 (0.12.9)
	COMMON: update parameter handling for performance

2017-02-05 (0.12.9)
	COMMON: can now attach SUB/FUNCs as MAP fields

2017-01-25 (0.12.9)
	UI: CIRCLE drawing is now anti-aliased

2017-01-25 (0.12.9)
	UI: improved CIRCLE performance

2017-01-21 (0.12.9)
	COMMON: allow array access via [] characters

2017-01-18 (0.12.9)
	COMMON: clear out of scope CATCH variables

2017-01-14 (0.12.9)
	COMMON: python style here-document

2017-01-08 (0.12.9)
	UI: editor display cursor row/col position

2017-01-01 (0.12.9)
	ANDROID: select alternative font

2016-12-31 (0.12.9)
	UI: show unsaved indicator following paste

2016-12-30 (0.12.9)
	ANDROID: added share command
	UI: added menu widget (three vertical dots)

2016-12-23 (0.12.9)